// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WithImage renders header background image 1`] = `
.c3 {
  position: absolute;
  visibility: hidden;
  height: 0;
  width: 0;
  top: 0;
  left: 0;
}

.c2 {
  z-index: 1;
  width: 100%;
}

.c2.gradient--overlay:after,
.c2.gradient--underlay:after,
.c2.gradient--overlay-shadow:after {
  content: "";
  top: 0;
  left: 0;
  right: 0;
  position: absolute;
}

.c2.gradient--overlay:after,
.c2.gradient--underlay:after {
  height: 100%;
}

.c2.gradient--overlay-shadow:after {
  height: 26%;
  background-image: linear-gradient(to bottom,rgba(0,0,0,0.6),rgba(0,0,0,0));
}

.c2:not(.gradient--overlay-shadow),
.c2.gradient--underlay.gradient--spotlight:after,
.c2:not(.gradient--spotlight).gradient--underlay:after {
  background-image: linear-gradient(76deg,#026cdf,#3ac7ff);
}

.c2.gradient--overlay-shadow {
  z-index: 1;
  background-image: linear-gradient(76deg,#026cdf,#3ac7ff),url(https://placekitten.com/g/2/2);
}

.c2.gradient--underlay.gradient--spotlight:after,
.c2:not(.gradient--spotlight).gradient--underlay:after {
  z-index: -1;
  opacity: 0.8;
}

.c2:not(.gradient--spotlight).gradient--overlay:after {
  z-index: 2;
  opacity: 0.4;
  background-image: linear-gradient(77deg,rgba(0,0,0,0),#000000);
}

.c1 {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  z-index: 1;
  min-height: 218px;
  max-height: 218px;
  background-size: cover;
  background-repeat: no-repeat;
}

.c0 {
  width: 100%;
  position: relative;
}

.c4 {
  margin: 0 auto;
  max-width: 1440px;
  width: 100%;
  padding-left: 16px;
  padding-right: 16px;
  box-sizing: border-box;
  padding-top: 60px;
  z-index: 2;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-sizing: border-box;
  margin-left: -8px;
  margin-right: -8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  z-index: 2;
}

.c5 .row--gutterless {
  -webkit-flex: 0 1 100%;
  -ms-flex: 0 1 100%;
  flex: 0 1 100%;
  margin-left: 0;
  margin-right: 0;
}

.c6 {
  box-sizing: border-box;
  padding-right: 8px;
  padding-left: 8px;
  max-width: 100%;
  display: block;
  -webkit-flex: 0 0 100%;
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
}

@media screen and (min-width:1024px) {
  .c2.gradient--spotlight {
    box-shadow: inset 0 1px 40px 10px rgba(0,0,0,0.15);
  }
}

@media screen and (min-width:768px) {
  .c2:not(.gradient--overlay-shadow),
  .c2.gradient--underlay.gradient--spotlight:after,
  .c2:not(.gradient--spotlight).gradient--underlay:after {
    background-image: linear-gradient(80deg,#026cdf,#3ac7ff);
  }
}

@media screen and (min-width:1024px) {
  .c2:not(.gradient--overlay-shadow),
  .c2.gradient--underlay.gradient--spotlight:after,
  .c2:not(.gradient--spotlight).gradient--underlay:after {
    background-image: linear-gradient(81deg,#026cdf,#3ac7ff);
  }
}

@media screen and (min-width:768px) {
  .c2.gradient--overlay-shadow {
    background-image: linear-gradient(80deg,#026cdf,#3ac7ff),url(https://placekitten.com/g/2/2);
  }
}

@media screen and (min-width:1024px) {
  .c2.gradient--overlay-shadow {
    background-image: linear-gradient(81deg,#026cdf,#3ac7ff),url(https://placekitten.com/g/2/2);
  }
}

@media screen and (min-width:768px) {
  .c2:not(.gradient--spotlight).gradient--overlay:after {
    background-image: linear-gradient(82deg,rgba(0,0,0,0),#000000);
  }
}

@media screen and (min-width:1024px) {
  .c2:not(.gradient--spotlight).gradient--overlay:after {
    background-image: linear-gradient(86deg,rgba(0,0,0,0),#000000);
  }
}

@media screen and (min-width:768px) {
  .c4 {
    padding-left: 24px;
    padding-right: 24px;
  }
}

@media screen and (min-width:768px) {
  .c5 {
    margin-left: -12px;
    margin-right: -12px;
  }
}

@media screen and (min-width:768px) {
  .c7 {
    padding-top: 60px;
  }
}

@media screen and (min-width:768px) {
  .c6 {
    padding-right: 12px;
    padding-left: 12px;
    max-width: 100%;
    display: block;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

@media screen and (min-width:1024px) {
  .c6 {
    max-width: 100%;
    display: block;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

@media screen and (min-width:1440px) {
  .c6 {
    max-width: 100%;
    display: block;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

<header
  aria-level="1"
  className="c0"
  role="heading"
>
  <span
    aria-hidden={true}
    className="c1 c2"
    style={
      Object {
        "backgroundImage": "url(https://placekitten.com/g/2/2)",
      }
    }
  >
    <img
      className="image image--seo image--hidden c3"
      src="https://placekitten.com/g/2/2"
    />
  </span>
  <div
    className="c4"
  >
    <div
      className="c5"
    >
      <div
        className="c6"
      >
        <div
          className="c7"
        >
          <img
            alt="place holder"
            src="https://placekitten.com/g/400/242"
          />
        </div>
      </div>
    </div>
  </div>
</header>
`;

exports[`WithImage renders header background image correctly when a withOverlay prop equaling true is passed 1`] = `
.c3 {
  position: absolute;
  visibility: hidden;
  height: 0;
  width: 0;
  top: 0;
  left: 0;
}

.c2 {
  z-index: 1;
  width: 100%;
}

.c2.gradient--overlay:after,
.c2.gradient--underlay:after,
.c2.gradient--overlay-shadow:after {
  content: "";
  top: 0;
  left: 0;
  right: 0;
  position: absolute;
}

.c2.gradient--overlay:after,
.c2.gradient--underlay:after {
  height: 100%;
}

.c2.gradient--overlay-shadow:after {
  height: 26%;
  background-image: linear-gradient(to bottom,rgba(0,0,0,0.6),rgba(0,0,0,0));
}

.c2:not(.gradient--overlay-shadow),
.c2.gradient--underlay.gradient--spotlight:after,
.c2:not(.gradient--spotlight).gradient--underlay:after {
  background-image: linear-gradient(76deg,#026cdf,#3ac7ff);
}

.c2.gradient--overlay-shadow {
  z-index: 1;
  background-image: linear-gradient(76deg,#026cdf,#3ac7ff),url(https://placekitten.com/g/2/2);
}

.c2.gradient--underlay.gradient--spotlight:after,
.c2:not(.gradient--spotlight).gradient--underlay:after {
  z-index: -1;
  opacity: 0.8;
}

.c2:not(.gradient--spotlight).gradient--overlay:after {
  z-index: 2;
  opacity: 0.4;
  background-image: linear-gradient(77deg,rgba(0,0,0,0),#000000);
}

.c1 {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  z-index: 1;
  min-height: 218px;
  max-height: 218px;
  background-size: cover;
  background-repeat: no-repeat;
}

.c0 {
  width: 100%;
  position: relative;
}

.c4 {
  margin: 0 auto;
  max-width: 1440px;
  width: 100%;
  padding-left: 16px;
  padding-right: 16px;
  box-sizing: border-box;
  padding-top: 60px;
  z-index: 2;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-sizing: border-box;
  margin-left: -8px;
  margin-right: -8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  z-index: 2;
}

.c5 .row--gutterless {
  -webkit-flex: 0 1 100%;
  -ms-flex: 0 1 100%;
  flex: 0 1 100%;
  margin-left: 0;
  margin-right: 0;
}

.c6 {
  box-sizing: border-box;
  padding-right: 8px;
  padding-left: 8px;
  max-width: 100%;
  display: block;
  -webkit-flex: 0 0 100%;
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
}

@media screen and (min-width:1024px) {
  .c2.gradient--spotlight {
    box-shadow: inset 0 1px 40px 10px rgba(0,0,0,0.15);
  }
}

@media screen and (min-width:768px) {
  .c2:not(.gradient--overlay-shadow),
  .c2.gradient--underlay.gradient--spotlight:after,
  .c2:not(.gradient--spotlight).gradient--underlay:after {
    background-image: linear-gradient(80deg,#026cdf,#3ac7ff);
  }
}

@media screen and (min-width:1024px) {
  .c2:not(.gradient--overlay-shadow),
  .c2.gradient--underlay.gradient--spotlight:after,
  .c2:not(.gradient--spotlight).gradient--underlay:after {
    background-image: linear-gradient(81deg,#026cdf,#3ac7ff);
  }
}

@media screen and (min-width:768px) {
  .c2.gradient--overlay-shadow {
    background-image: linear-gradient(80deg,#026cdf,#3ac7ff),url(https://placekitten.com/g/2/2);
  }
}

@media screen and (min-width:1024px) {
  .c2.gradient--overlay-shadow {
    background-image: linear-gradient(81deg,#026cdf,#3ac7ff),url(https://placekitten.com/g/2/2);
  }
}

@media screen and (min-width:768px) {
  .c2:not(.gradient--spotlight).gradient--overlay:after {
    background-image: linear-gradient(82deg,rgba(0,0,0,0),#000000);
  }
}

@media screen and (min-width:1024px) {
  .c2:not(.gradient--spotlight).gradient--overlay:after {
    background-image: linear-gradient(86deg,rgba(0,0,0,0),#000000);
  }
}

@media screen and (min-width:768px) {
  .c4 {
    padding-left: 24px;
    padding-right: 24px;
  }
}

@media screen and (min-width:768px) {
  .c5 {
    margin-left: -12px;
    margin-right: -12px;
  }
}

@media screen and (min-width:768px) {
  .c7 {
    padding-top: 60px;
  }
}

@media screen and (min-width:768px) {
  .c6 {
    padding-right: 12px;
    padding-left: 12px;
    max-width: 100%;
    display: block;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

@media screen and (min-width:1024px) {
  .c6 {
    max-width: 100%;
    display: block;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

@media screen and (min-width:1440px) {
  .c6 {
    max-width: 100%;
    display: block;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

<header
  aria-level="1"
  className="c0"
  role="heading"
>
  <span
    aria-hidden={true}
    className="gradient--overlay c1 c2"
    style={
      Object {
        "backgroundImage": "url(https://placekitten.com/g/2/2)",
      }
    }
  >
    <img
      className="image image--seo image--hidden c3"
      src="https://placekitten.com/g/2/2"
    />
  </span>
  <div
    className="c4"
  >
    <div
      className="c5"
    >
      <div
        className="c6"
      >
        <div
          className="c7"
        >
          <img
            alt="place holder"
            src="https://placekitten.com/g/400/242"
          />
        </div>
      </div>
    </div>
  </div>
</header>
`;

exports[`WithImage renders header background image correctly when a withUnderlay prop equaling true is passed 1`] = `
.c3 {
  position: absolute;
  visibility: hidden;
  height: 0;
  width: 0;
  top: 0;
  left: 0;
}

.c2 {
  z-index: 1;
  width: 100%;
}

.c2.gradient--overlay:after,
.c2.gradient--underlay:after,
.c2.gradient--overlay-shadow:after {
  content: "";
  top: 0;
  left: 0;
  right: 0;
  position: absolute;
}

.c2.gradient--overlay:after,
.c2.gradient--underlay:after {
  height: 100%;
}

.c2.gradient--overlay-shadow:after {
  height: 26%;
  background-image: linear-gradient(to bottom,rgba(0,0,0,0.6),rgba(0,0,0,0));
}

.c2:not(.gradient--overlay-shadow),
.c2.gradient--underlay.gradient--spotlight:after,
.c2:not(.gradient--spotlight).gradient--underlay:after {
  background-image: linear-gradient(76deg,#026cdf,#3ac7ff);
}

.c2.gradient--overlay-shadow {
  z-index: 1;
  background-image: linear-gradient(76deg,#026cdf,#3ac7ff),url(https://placekitten.com/g/2/2);
}

.c2.gradient--underlay.gradient--spotlight:after,
.c2:not(.gradient--spotlight).gradient--underlay:after {
  z-index: -1;
  opacity: 0.8;
}

.c2:not(.gradient--spotlight).gradient--overlay:after {
  z-index: 2;
  opacity: 0.4;
  background-image: linear-gradient(77deg,rgba(0,0,0,0),#000000);
}

.c1 {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  z-index: 1;
  min-height: 218px;
  max-height: 218px;
  background-size: cover;
  background-repeat: no-repeat;
}

.c0 {
  width: 100%;
  position: relative;
}

.c4 {
  margin: 0 auto;
  max-width: 1440px;
  width: 100%;
  padding-left: 16px;
  padding-right: 16px;
  box-sizing: border-box;
  padding-top: 60px;
  z-index: 2;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-sizing: border-box;
  margin-left: -8px;
  margin-right: -8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  z-index: 2;
}

.c5 .row--gutterless {
  -webkit-flex: 0 1 100%;
  -ms-flex: 0 1 100%;
  flex: 0 1 100%;
  margin-left: 0;
  margin-right: 0;
}

.c6 {
  box-sizing: border-box;
  padding-right: 8px;
  padding-left: 8px;
  max-width: 100%;
  display: block;
  -webkit-flex: 0 0 100%;
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
}

@media screen and (min-width:1024px) {
  .c2.gradient--spotlight {
    box-shadow: inset 0 1px 40px 10px rgba(0,0,0,0.15);
  }
}

@media screen and (min-width:768px) {
  .c2:not(.gradient--overlay-shadow),
  .c2.gradient--underlay.gradient--spotlight:after,
  .c2:not(.gradient--spotlight).gradient--underlay:after {
    background-image: linear-gradient(80deg,#026cdf,#3ac7ff);
  }
}

@media screen and (min-width:1024px) {
  .c2:not(.gradient--overlay-shadow),
  .c2.gradient--underlay.gradient--spotlight:after,
  .c2:not(.gradient--spotlight).gradient--underlay:after {
    background-image: linear-gradient(81deg,#026cdf,#3ac7ff);
  }
}

@media screen and (min-width:768px) {
  .c2.gradient--overlay-shadow {
    background-image: linear-gradient(80deg,#026cdf,#3ac7ff),url(https://placekitten.com/g/2/2);
  }
}

@media screen and (min-width:1024px) {
  .c2.gradient--overlay-shadow {
    background-image: linear-gradient(81deg,#026cdf,#3ac7ff),url(https://placekitten.com/g/2/2);
  }
}

@media screen and (min-width:768px) {
  .c2:not(.gradient--spotlight).gradient--overlay:after {
    background-image: linear-gradient(82deg,rgba(0,0,0,0),#000000);
  }
}

@media screen and (min-width:1024px) {
  .c2:not(.gradient--spotlight).gradient--overlay:after {
    background-image: linear-gradient(86deg,rgba(0,0,0,0),#000000);
  }
}

@media screen and (min-width:768px) {
  .c4 {
    padding-left: 24px;
    padding-right: 24px;
  }
}

@media screen and (min-width:768px) {
  .c5 {
    margin-left: -12px;
    margin-right: -12px;
  }
}

@media screen and (min-width:768px) {
  .c7 {
    padding-top: 60px;
  }
}

@media screen and (min-width:768px) {
  .c6 {
    padding-right: 12px;
    padding-left: 12px;
    max-width: 100%;
    display: block;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

@media screen and (min-width:1024px) {
  .c6 {
    max-width: 100%;
    display: block;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

@media screen and (min-width:1440px) {
  .c6 {
    max-width: 100%;
    display: block;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

<header
  aria-level="1"
  className="c0"
  role="heading"
>
  <span
    aria-hidden={true}
    className="gradient--underlay c1 c2"
    style={
      Object {
        "backgroundImage": "url(https://placekitten.com/g/2/2)",
      }
    }
  >
    <img
      className="image image--seo image--hidden c3"
      src="https://placekitten.com/g/2/2"
    />
  </span>
  <div
    className="c4"
  >
    <div
      className="c5"
    >
      <div
        className="c6"
      >
        <div
          className="c7"
        >
          <img
            alt="place holder"
            src="https://placekitten.com/g/400/242"
          />
        </div>
      </div>
    </div>
  </div>
</header>
`;

exports[`WithImage renders header background image with overlay shadow 1`] = `
.c3 {
  position: absolute;
  visibility: hidden;
  height: 0;
  width: 0;
  top: 0;
  left: 0;
}

.c2 {
  z-index: 1;
  width: 100%;
}

.c2.gradient--overlay:after,
.c2.gradient--underlay:after,
.c2.gradient--overlay-shadow:after {
  content: "";
  top: 0;
  left: 0;
  right: 0;
  position: absolute;
}

.c2.gradient--overlay:after,
.c2.gradient--underlay:after {
  height: 100%;
}

.c2.gradient--overlay-shadow:after {
  height: 26%;
  background-image: linear-gradient(to bottom,rgba(0,0,0,0.6),rgba(0,0,0,0));
}

.c2:not(.gradient--overlay-shadow),
.c2.gradient--underlay.gradient--spotlight:after,
.c2:not(.gradient--spotlight).gradient--underlay:after {
  background-image: linear-gradient(76deg,#026cdf,#3ac7ff);
}

.c2.gradient--overlay-shadow {
  z-index: 1;
  background-image: linear-gradient(76deg,#026cdf,#3ac7ff),url(https://placekitten.com/g/2/2);
}

.c2.gradient--underlay.gradient--spotlight:after,
.c2:not(.gradient--spotlight).gradient--underlay:after {
  z-index: -1;
  opacity: 0.8;
}

.c2:not(.gradient--spotlight).gradient--overlay:after {
  z-index: 2;
  opacity: 0.4;
  background-image: linear-gradient(77deg,rgba(0,0,0,0),#000000);
}

.c1 {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  z-index: 1;
  min-height: 218px;
  max-height: 218px;
  background-size: cover;
  background-repeat: no-repeat;
}

.c0 {
  width: 100%;
  position: relative;
}

.c4 {
  margin: 0 auto;
  max-width: 1440px;
  width: 100%;
  padding-left: 16px;
  padding-right: 16px;
  box-sizing: border-box;
  padding-top: 60px;
  z-index: 2;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-sizing: border-box;
  margin-left: -8px;
  margin-right: -8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  z-index: 2;
}

.c5 .row--gutterless {
  -webkit-flex: 0 1 100%;
  -ms-flex: 0 1 100%;
  flex: 0 1 100%;
  margin-left: 0;
  margin-right: 0;
}

.c6 {
  box-sizing: border-box;
  padding-right: 8px;
  padding-left: 8px;
  max-width: 100%;
  display: block;
  -webkit-flex: 0 0 100%;
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
}

@media screen and (min-width:1024px) {
  .c2.gradient--spotlight {
    box-shadow: inset 0 1px 40px 10px rgba(0,0,0,0.15);
  }
}

@media screen and (min-width:768px) {
  .c2:not(.gradient--overlay-shadow),
  .c2.gradient--underlay.gradient--spotlight:after,
  .c2:not(.gradient--spotlight).gradient--underlay:after {
    background-image: linear-gradient(80deg,#026cdf,#3ac7ff);
  }
}

@media screen and (min-width:1024px) {
  .c2:not(.gradient--overlay-shadow),
  .c2.gradient--underlay.gradient--spotlight:after,
  .c2:not(.gradient--spotlight).gradient--underlay:after {
    background-image: linear-gradient(81deg,#026cdf,#3ac7ff);
  }
}

@media screen and (min-width:768px) {
  .c2.gradient--overlay-shadow {
    background-image: linear-gradient(80deg,#026cdf,#3ac7ff),url(https://placekitten.com/g/2/2);
  }
}

@media screen and (min-width:1024px) {
  .c2.gradient--overlay-shadow {
    background-image: linear-gradient(81deg,#026cdf,#3ac7ff),url(https://placekitten.com/g/2/2);
  }
}

@media screen and (min-width:768px) {
  .c2:not(.gradient--spotlight).gradient--overlay:after {
    background-image: linear-gradient(82deg,rgba(0,0,0,0),#000000);
  }
}

@media screen and (min-width:1024px) {
  .c2:not(.gradient--spotlight).gradient--overlay:after {
    background-image: linear-gradient(86deg,rgba(0,0,0,0),#000000);
  }
}

@media screen and (min-width:768px) {
  .c4 {
    padding-left: 24px;
    padding-right: 24px;
  }
}

@media screen and (min-width:768px) {
  .c5 {
    margin-left: -12px;
    margin-right: -12px;
  }
}

@media screen and (min-width:768px) {
  .c7 {
    padding-top: 60px;
  }
}

@media screen and (min-width:768px) {
  .c6 {
    padding-right: 12px;
    padding-left: 12px;
    max-width: 100%;
    display: block;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

@media screen and (min-width:1024px) {
  .c6 {
    max-width: 100%;
    display: block;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

@media screen and (min-width:1440px) {
  .c6 {
    max-width: 100%;
    display: block;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

<header
  aria-level="1"
  className="c0"
  role="heading"
>
  <span
    aria-hidden={true}
    className="gradient--overlay-shadow c1 c2"
    style={
      Object {
        "backgroundImage": "",
      }
    }
  >
    <img
      className="image image--seo image--hidden c3"
      src="https://placekitten.com/g/2/2"
    />
  </span>
  <div
    className="c4"
  >
    <div
      className="c5"
    >
      <div
        className="c6"
      >
        <div
          className="c7"
        >
          <img
            alt="place holder"
            src="https://placekitten.com/g/400/242"
          />
        </div>
      </div>
    </div>
  </div>
</header>
`;

exports[`WithImage renders header with image 1`] = `
.c2 {
  z-index: 1;
  width: 100%;
}

.c2.gradient--overlay:after,
.c2.gradient--underlay:after,
.c2.gradient--overlay-shadow:after {
  content: "";
  top: 0;
  left: 0;
  right: 0;
  position: absolute;
}

.c2.gradient--overlay:after,
.c2.gradient--underlay:after {
  height: 100%;
}

.c2.gradient--overlay-shadow:after {
  height: 26%;
  background-image: linear-gradient(to bottom,rgba(0,0,0,0.6),rgba(0,0,0,0));
}

.c2:not(.gradient--overlay-shadow),
.c2.gradient--underlay.gradient--spotlight:after,
.c2:not(.gradient--spotlight).gradient--underlay:after {
  background-image: linear-gradient(76deg,#026cdf,#3ac7ff);
}

.c2.gradient--overlay-shadow {
  z-index: 1;
  background-image: linear-gradient(76deg,#026cdf,#3ac7ff);
}

.c2.gradient--underlay.gradient--spotlight:after,
.c2:not(.gradient--spotlight).gradient--underlay:after {
  z-index: -1;
  opacity: 0.8;
}

.c2:not(.gradient--spotlight).gradient--overlay:after {
  z-index: 2;
  opacity: 0.4;
  background-image: linear-gradient(77deg,rgba(0,0,0,0),#000000);
}

.c1 {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  z-index: 1;
  min-height: 218px;
  max-height: 218px;
}

.c0 {
  width: 100%;
  position: relative;
}

.c3 {
  margin: 0 auto;
  max-width: 1440px;
  width: 100%;
  padding-left: 16px;
  padding-right: 16px;
  box-sizing: border-box;
  padding-top: 60px;
  z-index: 2;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-sizing: border-box;
  margin-left: -8px;
  margin-right: -8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  z-index: 2;
}

.c4 .row--gutterless {
  -webkit-flex: 0 1 100%;
  -ms-flex: 0 1 100%;
  flex: 0 1 100%;
  margin-left: 0;
  margin-right: 0;
}

.c5 {
  box-sizing: border-box;
  padding-right: 8px;
  padding-left: 8px;
  max-width: 100%;
  display: block;
  -webkit-flex: 0 0 100%;
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
}

@media screen and (min-width:1024px) {
  .c2.gradient--spotlight {
    box-shadow: inset 0 1px 40px 10px rgba(0,0,0,0.15);
  }
}

@media screen and (min-width:768px) {
  .c2:not(.gradient--overlay-shadow),
  .c2.gradient--underlay.gradient--spotlight:after,
  .c2:not(.gradient--spotlight).gradient--underlay:after {
    background-image: linear-gradient(80deg,#026cdf,#3ac7ff);
  }
}

@media screen and (min-width:1024px) {
  .c2:not(.gradient--overlay-shadow),
  .c2.gradient--underlay.gradient--spotlight:after,
  .c2:not(.gradient--spotlight).gradient--underlay:after {
    background-image: linear-gradient(81deg,#026cdf,#3ac7ff);
  }
}

@media screen and (min-width:768px) {
  .c2.gradient--overlay-shadow {
    background-image: linear-gradient(80deg,#026cdf,#3ac7ff);
  }
}

@media screen and (min-width:1024px) {
  .c2.gradient--overlay-shadow {
    background-image: linear-gradient(81deg,#026cdf,#3ac7ff);
  }
}

@media screen and (min-width:768px) {
  .c2:not(.gradient--spotlight).gradient--overlay:after {
    background-image: linear-gradient(82deg,rgba(0,0,0,0),#000000);
  }
}

@media screen and (min-width:1024px) {
  .c2:not(.gradient--spotlight).gradient--overlay:after {
    background-image: linear-gradient(86deg,rgba(0,0,0,0),#000000);
  }
}

@media screen and (min-width:768px) {
  .c3 {
    padding-left: 24px;
    padding-right: 24px;
  }
}

@media screen and (min-width:768px) {
  .c4 {
    margin-left: -12px;
    margin-right: -12px;
  }
}

@media screen and (min-width:768px) {
  .c6 {
    padding-top: 60px;
  }
}

@media screen and (min-width:768px) {
  .c5 {
    padding-right: 12px;
    padding-left: 12px;
    max-width: 100%;
    display: block;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

@media screen and (min-width:1024px) {
  .c5 {
    max-width: 100%;
    display: block;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

@media screen and (min-width:1440px) {
  .c5 {
    max-width: 100%;
    display: block;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

<header
  aria-level="1"
  className="c0"
  role="heading"
>
  <span
    className="c1 c2"
    style={Object {}}
  >
    
  </span>
  <div
    className="c3"
  >
    <div
      className="c4"
    >
      <div
        className="c5"
      >
        <div
          className="c6"
        >
          <img
            alt="place holder"
            src="https://placekitten.com/g/400/242"
          />
        </div>
      </div>
    </div>
  </div>
</header>
`;
